# zest

./: LogsDoAntigravityTools.md  README.en.md  README.fr.md  README.md  README.vi.md  README.zh.md  tudo.md[
.github/workflows/: build-tauri.yml
Config/: Release.xcconfig
Quotio/: Localizable.xcstrings  QuotioApp.swift
Quotio.xcodeproj/: project.pbxproj
Quotio.xcodeproj/xcshareddata/xcschemes/: Quotio.xcscheme
Quotio/Models/: MCPSettings.swift
Quotio/Services/MCP/: MCPService.swift
Quotio/Views/Screens/: SettingsScreen.swift
Zest/: Info.plist  Localizable.xcstrings  ZestApp.swift
Zest.xcodeproj/: project.pbxproj
Zest.xcodeproj/xcshareddata/xcschemes/: Zest.xcscheme
Zest/Models/: AgentModels.swift  CustomProviderModels.swift  Models.swift
Zest/Services/: AgentConfigurationService.swift  LanguageManager.swift
Zest/Services/MCP/: MCPService.swift
Zest/ViewModels/: QuotaViewModel.swift
Zest/Views/Components/: CurrentModeBadge.swift  MCPConfigSheet.swift  ProxyControlButton.swift  ZestButtonStyles.swift  ZestCard.swift  ZestToggle.swift
scripts/: update-changelog.sh
zest-tauri/: .gitignore  README.md  build.sh  generate-icons.sh  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
zest-tauri/src/: App.tsx
zest-tauri/src-tauri/: Cargo.toml  tauri.conf.json
zest-tauri/src-tauri/capabilities/: default.json
zest-tauri/src-tauri/icons/: README.md  icon.icns
zest-tauri/src-tauri/src/: commands.rs  credentials.rs  lib.rs  main.rs  models.rs  proxy.rs  settings.rs  shell_profile.rs  tray.rs
(+24 files in other folders)
