[package]
name = "zest"
version = "1.0.0"
description = "AI Provider Quota Manager"
authors = ["Zest Team"]
edition = "2021"

[lib]
name = "zest_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-autostart = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
uuid = { version = "1.11", features = ["v4"] }
regex = "1.11"
open = "5.3"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
libc = "0.2"
md5 = "0.7"
urlencoding = "2.1"

[target.'cfg(windows)'.dependencies]
windows-registry = "0.3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
